--- a/.github/workflows/auto-add-issue.yml
+++ b/.github/workflows/auto-add-issue.yml
@@ -1,14 +1,15 @@
-name: Move new issues into xyz94
+name: Add to project
 on:
   issues:
-    types: [opened]
+    types:
+      - opened
 
 jobs:
-  automate-project-columns:
+  add-to-project:
+    name: Add issue to project
     runs-on: ubuntu-latest
     steps:
-      - uses: alex-page/github-project-automation-plus@v0.3.0
+      - uses: actions/add-to-project@main
         with:
-          project: xyz94
-          column: log
+          project-url: https://github.com/users/te94d/projects/5
           repo-token: ${{ secrets.GH_TOKEN }}
